--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -103,7 +103,7 @@ body {
 }
 
 .hero-bg {
-  background: url("../images/hero-bg.svg");
+  background: url("./../assets/images/hero-bg.svg");
   background-size: cover;
 }
 
