--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
-
 :root {
   /* Main Color */
   --themeColor: #21bf73;
@@ -9,7 +8,7 @@
   --themeDarkColor: #2e374f;
   --themeWhiteColor: #ffffff;
 
-  /* Grey scale Color */
+  /* Greyscale Color */
   --lightColor: #9ea3ae;
   --lightDeepColor-1: #9ea3ae;
   --lightDeepColor-2: #faf8f6;
@@ -44,6 +43,34 @@ body {
 
   font-family: "Poppins", sans-serif !important;
   font-size: 14px;
+}
+
+.product-img-sm {
+  width: 50px;
+  height: auto;
+  border-radius: 4px;
+}
+
+.pay-img {
+  -webkit-filter: brightness(1);
+  filter: brightness(1);
+}
+.pay-img:hover {
+  -webkit-filter: brightness(0.8);
+  filter: brightness(0.8);
+}
+
+.spinner-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.95); /* Semi white background */
+  z-index: 10000; /* Ensure spinner appears above all other elements */
 }
 
 .section {
@@ -103,7 +130,7 @@ body {
 }
 
 .hero-bg {
-  background: url("./../assets/images/hero-bg.svg");
+  background: url("../images/hero-bg.svg");
   background-size: cover;
 }
 
